k8s/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: chat:latest
        ports:
        - containerPort: 5001
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: chat
spec:
  selector:
    app: chat
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
